# nvidia-gui

./: .gitignore  ARCHITECTURE.md  INTEGRATION.md  LICENSE  README.md  final_summary.md  install.sh  pyproject.toml
.agents/skills/code-governance/: SKILL.md
.agents/skills/nvidia-gui-panel-designer/: SKILL.md
.github/workflows/: ci.yml
data/applications/: nvidia-gui.desktop
data/metainfo/: org.mena.nvidia-gui.metainfo.xml
data/polkit/: 49-nvidia-gui.rules  org.mena.nvidia-gui.policy
docs/: registry-dwords.md
scripts/: nvidia-gui-apply-modprobe
src/: config_manager.py  dlss_manager.py  main.py
src/nvidia_gui/: __init__.py  composition_root.py
src/nvidia_gui/adapters/: __init__.py  color_wayland.py  color_xrandr.py  config_toml.py  diagnostics.py  dlss_cache_fs.py  dlss_swap_fs.py  feature_detection.py  game_library_steam.py  gpu_query_sm.py  ipc_socket.py  kernel_param_modprobe.py  launch_option_steam.py  overlay_mangohud.py  pe_version.py  profile_store_fs.py  system_info.py  vdf_lite.py  vibrance_nvibrant.py
src/nvidia_gui/application/: __init__.py  ports.py  use_cases.py
src/nvidia_gui/assets/: nvidia_features.json  nvidia_features.toml
src/nvidia_gui/domain/: __init__.py  models.py  services.py
src/nvidia_gui/presentation/: __init__.py  app.py  download_worker.py  icons.py  styles-base.css  styles-effects.css  theme.py  views.py  views_dlss.py  views_settings.py  widgets.py  window.py
tests/: test_services.py
tests/game_corpus/: appmanifest_1091500.acf  appmanifest_1493710.acf  appmanifest_1628350.acf  appmanifest_228980.acf  appmanifest_3219900.acf  appmanifest_3266440.acf  appmanifest_4400001.acf  appmanifest_4400002.acf  appmanifest_9999999.acf  libraryfolders.vdf
tests/game_corpus/installs/PhantomFrontier/: .keep
